Fixed python shell environment

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -193,7 +193,7 @@
         {
             "label": "Run Python file",
             "type": "shell",
-            "command": "python3",
+            "command": "python",
             "args": [
                 "${file}"
             ],
