--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,11 @@
             "request": "launch",
             "servertype": "openocd",
             "cwd": "${workspaceFolder}",
-            "executable": "build/CubeMXTest.elf",
-            "svdFile": ".vscode/STM32L052.svd",
+            "executable": "Hub/build/Hub.elf",
+            "svdFile": "Tools/OpenOCD/STM32L052.svd",
             "configFiles": [
-                "/Users/richarddavies/Desktop/Projects/Learn:Practice/CubeMXTest/.vscode/stlink.cfg",
-                ".vscode/stm32l0.cfg"
+                "Tools/OpenOCD/stlink.cfg",
+                "Tools/OpenOCD/stm32l0.cfg"
             ],
             "preLaunchTask": "Build project"
         },
