Git is so confusing

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.DS_Store
-000Webhost
-CoolTerm
-Development Invoices
-old
-*.d
-*.o
+# .DS_Store
+# 000Webhost
+# CoolTerm
+# Development Invoices
+# old
+# *.d
+# *.o
