--- a/hub/Makefile
+++ b/hub/Makefile
@@ -1,9 +1,9 @@
-PROJECT 		= Hub
+PROJECT 		= hub
 
 # TODO - you will need to edit these two lines!
 DEVICE 		= 	stm32l052c8t6
 
 # You shouldn't have to edit anything below here.
-# INCLUDES 	+= 	-I../coolease/include
+INCLUDES 	+= 	-Ihub/include
 
 include Makefile.inc
