updated tasks to inlclude open doxygen command

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -199,6 +199,16 @@
                 "focus": true
             },
             "problemMatcher": []
+        },
+        {
+            "label": "Open Doxygen",
+            "type": "shell",
+            "command": "open docs/doxygen/html/index.html",
+            "presentation": {
+                "focus": true
+            },
+            "problemMatcher": [],
+            "dependsOn": "Generate Doxygen"
         }
     ]
 }
