Added old source files

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,48 +1,80 @@
-# Be silent per default, but 'make V=1' will show all compiler calls.
-# If you're insane, V=99 will print out all sorts of things.
-ifeq ($(V),0)
-Q	:= @
-NULL	:= 2>/dev/null
+#############################################################
+# Tools
+#############################################################
+
+PREFIX		= arm-none-eabi
+CC			:= $(PREFIX)-gcc
+CXX			:= $(PREFIX)-g++
+LD			:= $(PREFIX)-gcc
+AR			:= $(PREFIX)-ar
+AS			:= $(PREFIX)-as
+OBJCOPY		:= $(PREFIX)-objcopy
+OBJDUMP		:= $(PREFIX)-objdump
+GDB			:= $(PREFIX)-gdb
+SIZE		:= $(PREFIX)-size
+OOCD		:= openocd
+
+#############################################################
+# LibopenCM3
+#############################################################
+
+OPENCM3_DIR  	= libopencm3
+OPENCM3_INC 	= $(OPENCM3_DIR)/include
+INCLUDES 	   += $(patsubst %,-I%, . $(OPENCM3_INC) )
+
+include $(OPENCM3_DIR)/mk/genlink-config.mk
+
+# Linker script generator fills this in for us.
+ifeq (,$(DEVICE))
+LDLIBS += -l$(OPENCM3_LIB)
 endif
 
-# Tool paths.
-PREFIX	= arm-none-eabi-
-CC	= $(PREFIX)gcc
-LD	= $(PREFIX)gcc
-OBJCOPY	= $(PREFIX)objcopy
-OBJDUMP	= $(PREFIX)objdump
-SIZE	:= $(PREFIX)size
-OOCD	?= openocd
+LDLIBS += -Wl,--start-group -lc -lgcc -lnosys -Wl,--end-group
 
-# Files and build location
+#############################################################
+# Project Files
+#############################################################
+
+# Include Headers
+INCLUDES += -I$(PROJECT)/include -Icommon/include
+
+# Source Files
 SRCDIR = $(PROJECT)/src
 COMDIR = common/src
 CFILES = $(wildcard $(SRCDIR)/*.c) $(wildcard $(COMDIR)/*.c)
+VPATH = $(SRCDIR) $(COMDIR)
 
+# Object Files
 OBJDIR = $(PROJECT)/obj
 OBJS   = $(addprefix $(OBJDIR)/,$(notdir $(CFILES:.c=.o)))
 
+# Build Directory
 BINDIR = $(PROJECT)/bin
 
-# Libopencm3 Includes
-OPENCM3_DIR  =	libopencm3
-OPENCM3_INC = $(OPENCM3_DIR)/include
-INCLUDES += $(patsubst %,-I%, . $(OPENCM3_INC) )
-
-include $(OPENCM3_DIR)/mk/genlink-config.mk
+# Linker script
+LDSCRIPT = $(PROJECT).ld
 
 # List of files for make_clean
 GENERATED_BINS = $(BINDIR)/*.elf $(BINDIR)/*.bin $(BINDIR)/*.map $(BINDIR)/*.list $(BINDIR)/*.lss
 
+
+#############################################################
 # Options & Flags
-OPT ?= -Og
+#############################################################
+
 CSTD ?= -std=c99
+
+ifeq ($(D),)
+OPT = -O3
+else
+OPT = -Og -ggdb3
+endif
 
 TGT_CPPFLAGS += -MD
 TGT_CPPFLAGS += -Wall -Wundef $(INCLUDES)
 TGT_CPPFLAGS += $(INCLUDES) $(OPENCM3_DEFS)
 
-TGT_CFLAGS += $(OPT) $(CSTD) -ggdb3
+TGT_CFLAGS += $(OPT) $(CSTD)
 TGT_CFLAGS += $(ARCH_FLAGS)
 TGT_CFLAGS += -fno-common
 TGT_CFLAGS += -ffunction-sections -fdata-sections
@@ -61,56 +93,59 @@ TGT_LDFLAGS += -T$(LDSCRIPT) -L$(OPENCM3_DIR)/lib -nostartfiles
 TGT_LDFLAGS += $(ARCH_FLAGS)
 TGT_LDFLAGS += -specs=nano.specs
 TGT_LDFLAGS += -Wl,--gc-sections
-
-# OPTIONAL
 TGT_LDFLAGS += -Wl,-Map=$(BINDIR)/$(PROJECT).map
+
 ifeq ($(V),99)
 TGT_LDFLAGS += -Wl,--print-gc-sections
 endif
 
-# Linker script generator fills this in for us.
-ifeq (,$(DEVICE))
-LDLIBS += -l$(OPENCM3_LIB)
-endif
-# nosys is only in newer gcc-arm-embedded...
-#LDLIBS += -specs=nosys.specs
-LDLIBS += -Wl,--start-group -lc -lgcc -lnosys -Wl,--end-group
-
-print:
-	@echo $(CFILES) $(OBJS)
-
-all: $(BINDIR)/$(PROJECT).elf $(BINDIR)/$(PROJECT).bin $(BINDIR)/$(PROJECT).lss $(BINDIR)/$(PROJECT).list
-	$(SIZE) $(BINDIR)/$(PROJECT).elf
-
-
-# error if not using linker script generator
-ifeq (,$(DEVICE))
-$(LDSCRIPT):
-ifeq (,$(wildcard $(LDSCRIPT)))
-    $(error Unable to find specified linker script: $(LDSCRIPT))
-endif
-else
-# if linker script generator was used, make sure it's cleaned.
-GENERATED_BINS += $(LDSCRIPT)
+# Be silent per default, but 'make V=1' will show all compiler calls.
+# If you're insane, V=99 will print out all sorts of things.
+ifeq ($(V),0)
+Q		:= @
+NULL	:= 2>/dev/null
 endif
 
-# Need a special rule to have a bin dir
-$(OBJDIR)/%.o: $(SRCDIR)/%.c
-	@printf "  CC\t$<\n"
-	@mkdir -p $(dir $@)
-	$(Q)$(CC) $(TGT_CFLAGS) $(CFLAGS) $(TGT_CPPFLAGS) $(CPPFLAGS) -o $@.S -E $<
-	$(Q)$(CC) $(TGT_CFLAGS) $(CFLAGS) $(TGT_CPPFLAGS) $(CPPFLAGS) -o $@ -c $<
+#############################################################
+# Top builds routines
+#############################################################
 
-$(OBJDIR)/%.o: $(COMDIR)/%.c
-	@printf "  CC\t$<\n"
-	@mkdir -p $(dir $@)
-	$(Q)$(CC) $(TGT_CFLAGS) $(CFLAGS) $(TGT_CPPFLAGS) $(CPPFLAGS) -o $@.S -E $<
-	$(Q)$(CC) $(TGT_CFLAGS) $(CFLAGS) $(TGT_CPPFLAGS) $(CPPFLAGS) -o $@ -c $<
+all: project bootloader
 
+project: 	$(BINDIR)/$(PROJECT).elf $(BINDIR)/$(PROJECT).bin $(BINDIR)/$(PROJECT).lss $(BINDIR)/$(PROJECT).list
+			$(SIZE) $(BINDIR)/$(PROJECT).elf
 
+bootloader:	$(BINDIR)/$(BOOTLOADER).elf $(BINDIR)/$(BOOTLOADER).bin $(BINDIR)/$(BOOTLOADER).lss $(BINDIR)/$(BOOTLOADER).list
+			$(SIZE) $(BINDIR)/$(BOOTLOADER).elf
+
+clean:
+	rm -rf $(OBJDIR) $(GENERATED_BINS)
+
+print-%:
+	@echo VARIABLE=$($*)
+
+.PHONY: all clean print
+
+#############################################################
+# File build rules
+#############################################################
+
+# Elf
 $(BINDIR)/$(PROJECT).elf: $(OBJS) $(LDSCRIPT) $(LIBDEPS)
 	@printf "  LD\t$@\n"
 	$(Q)$(LD) $(TGT_LDFLAGS) $(LDFLAGS) $(OBJS) $(LDLIBS) -o $@
+
+# Object files
+$(OBJDIR)/%.o: %.c
+	@printf "  CC\t$<\n"
+	@mkdir -p $(dir $@)
+	$(Q)$(CC) $(TGT_CFLAGS) $(CFLAGS) $(TGT_CPPFLAGS) $(CPPFLAGS) -o $@.S -E $<
+	$(Q)$(CC) $(TGT_CFLAGS) $(CFLAGS) $(TGT_CPPFLAGS) $(CPPFLAGS) -o $@ -c $<
+
+# # Bootloader elf
+# $(BINDIR)/$(BOOTLOADER).elf: $(OBJS) $(LDSCRIPT) $(LIBDEPS)
+# 	@printf "  LD\t$@\n"
+# 	$(Q)$(LD) $(TGT_LDFLAGS) $(LDFLAGS) $(OBJS) $(LDLIBS) -o $@
 
 %.bin: %.elf
 	@printf "  OBJCOPY\t$@\n"
@@ -122,10 +157,6 @@ $(BINDIR)/$(PROJECT).elf: $(OBJS) $(LDSCRIPT) $(LIBDEPS)
 %.list: %.elf
 	$(OBJDUMP) -S $< > $@
 
-clean:
-	rm -rf $(OBJDIR) $(GENERATED_BINS)
-
-.PHONY: all clean flash
 -include $(OBJS:.o=.d)
 
 include $(OPENCM3_DIR)/mk/genlink-rules.mk
