--- a/tools/OpenOCD/stm32l0.cfg
+++ b/tools/OpenOCD/stm32l0.cfg
@@ -45,7 +45,7 @@ $_TARGETNAME configure -work-area-phys 0x20000000 -work-area-size $_WORKAREASIZE
 
 # flash size will be probed
 set _FLASHNAME $_CHIPNAME.flash
-flash bank $_FLASHNAME stm32lx 0x08004000 0 0 0 $_TARGETNAME
+flash bank $_FLASHNAME stm32lx 0x08000000 0 0 0 $_TARGETNAME
 
 reset_config srst_nogate
 
@@ -70,6 +70,7 @@ proc stm32l0_enable_HSI16 {} {
 }
 
 $_TARGETNAME configure -event reset-init {
+	echo "reset init"
 	stm32l0_enable_HSI16
 }
 
@@ -84,4 +85,14 @@ $_TARGETNAME configure -event examine-end {
 	# Stop watchdog counters during halt
 	# DBGMCU_APB1_FZ |= DBG_IWDG_STOP | DBG_WWDG_STOP
 	mmw 0x40015808 0x00001800 0
+}
+
+$_TARGETNAME configure -event gdb-attach {
+    echo "Halting target"
+    halt
+}
+
+$_TARGETNAME configure -event gdb-detach {
+    echo "Resetting target"
+    reset
 }
