--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -222,6 +222,24 @@
             "dependsOn": ["Build hub"],
             "problemMatcher": []
         },
+        // Hub EEPROM
+        {
+            "label": "Hub EEPROM Download",
+            "type": "shell",
+            "command": "./tools/stm32flash/stm32flash",
+            "args": [
+                "-b230400",
+                "-E",
+                "-S0x08080000",
+                "-whub/hub_eeprom.bin",
+                "-v",
+                "-R",
+                "-i-dtr,rts,-rts:rts",
+                "/dev/cu.usbserial-A50285BI",
+            ],
+            // "dependsOn": ["Build sensor"],
+            "problemMatcher": []
+        },
         // Sensor
         {
             "label": "Sensor Download",
