--- a/tools/openocd/stlink.cfg
+++ b/tools/openocd/stlink.cfg
@@ -6,8 +6,9 @@
 interface hla
 hla_layout stlink
 hla_device_desc "ST-LINK"
-#hla_vid_pid 0x0483 0x3744 0x0483 0x3748 0x0483 0x374b
+# hla_vid_pid 0x0483 0x3744 0x0483 0x3748 0x0483 0x374b
 hla_vid_pid 0x0483 0x3748
+hla_vid_pid 0x0483 0x374b
 
 # Optionally specify the serial number of ST-LINK/V2 usb device.  ST-LINK/V2
 # devices seem to have serial numbers with unreadable characters.  ST-LINK/V2
