--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -56,7 +56,7 @@
             "label": "Build hub",
             "group": "build",
             "type": "shell",
-            "command": "make -fhub/Makefile all",
+            "command": "make -fhub/Makefile all -j",
             "args": [],
             "problemMatcher": {
                 "pattern": {
@@ -77,7 +77,7 @@
             "label": "Build sensor",
             "group": "build",
             "type": "shell",
-            "command": "make -fsensor/Makefile all",
+            "command": "make -fsensor/Makefile all -j",
             "problemMatcher": {
                 "pattern": {
                     "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
@@ -446,6 +446,26 @@
             },
             "problemMatcher": [],
             "dependsOn": "Generate Doxygen"
+        }
+    ],
+    "inputs": [
+        {
+            "id": "prog",
+            "type": "pickString",
+            "description": "Programming Method",
+            "options": [
+                "/usr/local/bin/openocd",
+                "./tools/stm32flash/stm32flash",
+            ]
+        },
+        {
+            "id": "dev",
+            "type": "pickString",
+            "description": "Device",
+            "options": [
+                "hub/bin/hub.bin",
+                "sensor/bin/sensor.bin",
+            ]
         }
     ]
 }
