--- a/mise.toml
+++ b/mise.toml
@@ -18,7 +18,8 @@ run = "cmake . --preset {{arg(name='preset', i=1, default='debug')}}"
 
 [tasks.build]
 alias = "bu"
+depends = "reconfigure"
 run = 'cmake --build --preset {{arg(name="preset", i=1, default="debug")}}'
 
 [tasks.fclean]
-run = "rm -rf build"
+run = "rm -rf build && make -C libopencm3 clean"
