--- a/sensor/CMakeLists.txt
+++ b/sensor/CMakeLists.txt
@@ -1,44 +1,51 @@
+set(COOLEASE_DEVICE "sensor")
 set(APP "sensor_${CMAKE_BUILD_TYPE}")
 set(BOOTLOADER "${APP}_bootloader")
 set(DEVICE "stm32l051c8t6")
 set(LINKER_SCRIPT "${CMAKE_CURRENT_LIST_DIR}/ld/sensor.ld")
 set(BOOTLOADER_LINKER_SCRIPT "${CMAKE_CURRENT_LIST_DIR}/ld/sensor_bootloader.ld")
+set(SENSOR_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/include")
 
 ################################################################################
-# sensor sources and linking
+# Sensor common
 ################################################################################
 
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../common ${CMAKE_CURRENT_BINARY_DIR}/common)
+add_subdirectory(../common ${CMAKE_CURRENT_BINARY_DIR}/common)
 
 set(C_SOURCES "si7051.c" "tmp112.c")
-set(C_SOURCES_BOOTLOADER "sensor_bootloader.c" ${C_SOURCES})
-list(APPEND C_SOURCES "sensor.c")
 
-add_executable(${APP} ${C_SOURCES})
-target_include_directories(${APP} PRIVATE "include")
-target_include_directories(${APP} PRIVATE ${COMMON_INCLUDE})
-target_include_directories(${APP} PRIVATE ${LIBOPENCM3_INCLUDE})
-target_link_libraries(${APP} PRIVATE ${COMMON_LIB} libopencm3)
+################################################################################
+# Sensor app
+################################################################################
+
+set(C_SOURCES_APP "sensor.c" ${C_SOURCES})
+add_executable(${APP} ${C_SOURCES_APP})
+
+target_include_directories(${APP} PRIVATE ${SENSOR_INCLUDE})
+target_link_libraries(${APP} PRIVATE ${COMMON_LIB})
 target_link_options(${APP} PRIVATE -T${LINKER_SCRIPT})
-
-add_executable(${BOOTLOADER} ${C_SOURCES_BOOTLOADER})
-target_include_directories(${BOOTLOADER} PRIVATE "include")
-target_include_directories(${BOOTLOADER} PRIVATE ${COMMON_INCLUDE})
-target_include_directories(${BOOTLOADER} PRIVATE ${LIBOPENCM3_INCLUDE})
-target_link_libraries(${BOOTLOADER} PRIVATE ${COMMON_LIB} libopencm3)
-target_link_options(${BOOTLOADER} PRIVATE -T${BOOTLOADER_LINKER_SCRIPT})
-
-target_include_directories(${COMMON_LIB} PRIVATE "include")
-target_include_directories(${COMMON_LIB} PRIVATE ${LIBOPENCM3_INCLUDE})
 
 add_custom_target(${APP}.lss ALL
   DEPENDS $<TARGET_FILE:${APP}>
-  COMMAND arm-none-eabi-objdump -S $<TARGET_FILE:${APP}>.elf > $<TARGET_FILE:${APP}>.lss
-  COMMENT "Generating ${APP}.lss from ${APP}.elf"
+  COMMAND ${CMAKE_COMMAND} -E echo "Generating ${APP}.lss from ${APP}.elf"
+  COMMAND arm-none-eabi-objdump -S $<TARGET_FILE:${APP}>.elf >
+  $<TARGET_FILE:${APP}>.lss
 )
+
+################################################################################
+# Sensor bootloader
+################################################################################
+
+set(C_SOURCES_BOOTLOADER "sensor_bootloader.c" ${C_SOURCES})
+add_executable(${BOOTLOADER} ${C_SOURCES_BOOTLOADER})
+
+target_include_directories(${BOOTLOADER} PRIVATE ${SENSOR_INCLUDE})
+target_link_libraries(${BOOTLOADER} PRIVATE ${COMMON_LIB})
+target_link_options(${BOOTLOADER} PRIVATE -T${BOOTLOADER_LINKER_SCRIPT})
 
 add_custom_target(${BOOTLOADER}.lss ALL
   DEPENDS $<TARGET_FILE:${BOOTLOADER}>
-  COMMAND arm-none-eabi-objdump -S $<TARGET_FILE:${BOOTLOADER}>.elf > $<TARGET_FILE:${BOOTLOADER}>.lss
-  COMMENT "Generating ${BOOTLOADER}.lss from ${BOOTLOADER}.elf"
+  COMMAND ${CMAKE_COMMAND} -E echo "Generating ${BOOTLOADER}.lss from ${BOOTLOADER}.elf"
+  COMMAND arm-none-eabi-objdump -S $<TARGET_FILE:${BOOTLOADER}>.elf >
+  $<TARGET_FILE:${BOOTLOADER}>.lss
 )
