--- a/mise.toml
+++ b/mise.toml
@@ -10,6 +10,23 @@ ruby = "latest"
 [env]
 '_'.python.venv = { create = true, path = ".venv" }
 
+[settings]
+experimental = true
+
+[hooks.enter]
+shell = "bash"
+script = '''
+export PROJ_OLD_PS1=$PS1
+export PS1="\033[0;32m\u:\W\$ \033[0m"
+'''
+
+[hooks.leave]
+shell = "bash"
+script = '''
+export PS1=$PROJ_OLD_PS1
+unset PROJ_OLD_PS1
+'''
+
 [tasks.install-ceedling]
 run = "gem install ceedling"
 
