--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -9,41 +9,38 @@ target_include_directories(${CONFIG_LIB} PUBLIC ${CONFIG_INCLUDE})
 # Link with libopencm3
 ################################################################################
 
-include(${CMAKE_CURRENT_LIST_DIR}/libopencm3.cmake)
+include(${CMAKE_CURRENT_LIST_DIR}/../cmake/libopencm3.cmake)
 target_link_libraries(${CONFIG_LIB} PUBLIC libopencm3)
 
+
 ################################################################################
-# Global compile and linker options
+# Link with FreeRTOS
 ################################################################################
 
-# clear default cmake flags
-# set(CMAKE_C_FLAGS "")
-# set(CMAKE_CXX_FLAGS "")
+include(${CMAKE_CURRENT_LIST_DIR}/../cmake/freertos.cmake)
 
-target_compile_options(${CONFIG_LIB} PUBLIC
-  -std=c99
-  $<$<CONFIG:Debug>:-ggdb3>
-  $<$<CONFIG:Debug>:-Og>
-  $<$<CONFIG:Release>:-Os>
-  $<$<CONFIG:Debug>:-DDEBUG>
-  -Wall
-  -Wextra
-  -Wimplicit-function-declaration
-  -Wredundant-decls
-  -Wmissing-prototypes
-  -Wstrict-prototypes
-  -Wundef
-  -Wshadow
+target_compile_options(FreeRTOS PUBLIC
   -mcpu=cortex-m0plus
+  -Wall -Wextra -Wpedantic
+  -fdata-sections -ffunction-sections
+  $<$<CONFIG:Debug>:-O0>
+  $<$<CONFIG:Debug>:-g3>
+  $<$<CONFIG:Release>:-Os>
+  $<$<CONFIG:Release>:-g0>
+  $<$<CONFIG:Debug>:-DDEBUG>
   -msoft-float
   -mthumb
-  -Wstrict-prototypes
-  -fno-common
-  -ffunction-sections
-  -fdata-sections
   -MD
   -DSTM32L0
 )
+
+set(CMAKE_ASM_FLAGS "${CMAKE_C_FLAGS} -x assembler-with-cpp -MMD -MP")
+
+target_link_libraries(${CONFIG_LIB} PUBLIC FreeRTOS)
+
+################################################################################
+# Export config library target
+################################################################################
 
 if(${COOLEASE_DEVICE} STREQUAL "hub")
   target_compile_definitions(${CONFIG_LIB} PUBLIC COOLEASE_DEVICE_HUB)
@@ -52,16 +49,11 @@ else()
 endif()
 
 target_link_options(${CONFIG_LIB} PUBLIC
-  -nostartfiles
   -specs=nano.specs
-  -mcpu=cortex-m0plus
   -msoft-float
   -Wl,--gc-sections
   -Wl,--nmagic
+  -Wl,--print-memory-usage
 )
-
-################################################################################
-# Export config library target
-################################################################################
 
 set(CONFIG_LIB ${CONFIG_LIB} PARENT_SCOPE)
